--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "build": "npx rimraf build && tsc",
-    "publicate": "npm version prerelease && tsc && npm publish",
+    "promote": "npm run build && npm version prerelease && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
