--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wgo-object-extensions",
+  "name": "wgo-utils",
   "version": "0.0.2",
   "description": "JS Object Extensions Utils",
   "main": "build/index.js",
