--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisegar-org/wgo-object-extensions",
-  "version": "0.0.2",
+  "version": "0.0.3-0",
   "description": "JS Object Extensions & Utilities",
   "main": "build/index.js",
   "scripts": {
