--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
   "homepage": "https://github.com/wisegar-org/wgo-object-extensions#readme",
   "devDependencies": {
     "@types/node": "^16.11.33",
+    "dayjs": "^1.11.6",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {
-    "moment": "^2.29.1"
   }
 }
