--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wisegar-org/wgo-object-extensions",
+  "name": "wgo-object-extensions",
   "version": "0.0.2-6",
   "description": "JS Object Extensions & Utilities",
   "main": "build/index.js",
