--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wgo-object-extensions",
-  "version": "0.0.3",
-  "description": "JS Object Extensions & Utilities",
+  "name": "wgo-extensions",
+  "version": "0.0.1",
+  "description": "WGO JS Object Extensions & Utilities",
   "main": "build/index.js",
   "scripts": {
     "start": "nodemon",
@@ -9,18 +9,13 @@
     "promote": "npm run build && npm version prerelease && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wisegar-org/wgo-object-extensions.git"
-  },
   "keywords": [
-    "object",
     "extensions",
     "utils",
     "mapper",
     "tools"
   ],
-  "author": "Wisegar.org",
+  "author": "Wisegar Development Group",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/wisegar-org/wgo-object-extensions/issues"
