--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wgo-extensions",
-  "version": "0.0.3-0",
+  "version": "0.0.2",
   "description": "WGO JS Object Extensions & Utilities",
   "main": "build/index.js",
   "scripts": {
     "start": "nodemon",
     "build": "npx rimraf build && tsc",
-    "promote": "npm run build && npm version prerelease && npm publish",
+    "promote": "npm run build && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
